Alterções finais(provavelmente)
Testes feitos, adicionei as opções que faltavam no menu,corrigi o metodo
de eventos com poucas inscrições para verificar se têm <50% das vagas
preenchidas. Adicionei tipo de utilizador porque não estava a funcionar
apenas com a verificação de email.